refactored backend and working on frontend

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,14 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+
+    <link rel="shortcut icon" href="../public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap"
       rel="stylesheet"
     />
+
     <meta name="theme-color" content="#000000" />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <script>
@@ -27,24 +32,24 @@
           document.getElementById("navbar").style.background = "#F3F4F6";
         }
 
-
-
         if (
           document.body.scrollTop > 25 ||
           document.documentElement.scrollTop > 20
         ) {
           document.getElementById("footer").style.backgroundColor = "#F3F4F6";
         } else {
-          document.getElementById("footer").style.backgroundColor = "transparent";
+          document.getElementById("footer").style.backgroundColor =
+            "transparent";
         }
       }
     </script>
 
-    <title>React Template</title>
     <script
       src="https://kit.fontawesome.com/fd43fa86c2.js"
       crossorigin="anonymous"
     ></script>
+
+    <title>Pawan - airBnbClone</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
