--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -49,7 +49,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>Pawan - airBnbClone</title>
+    <title>Pawan's airBnbClone</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
