--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
   <head>
     <meta charset="utf-8" />
+    <meta property="og:title" content="Example Title" />
+    <meta name="image" property="og:image" content="%PUBLIC_URL%/example.png" />
+    <meta name="author" content="Example Author" />
+    <meta property="og:description" content="Example Description" />
+    <meta property="og:url" content="https://example.com" />
 
     <link rel="shortcut icon" href="../public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
