updated meta pic

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,11 +2,10 @@
 <html lang="en" prefix="og: http://ogp.me/ns#">
   <head>
     <meta charset="utf-8" />
-    <meta property="og:title" content="Example Title" />
-    <meta name="image" property="og:image" content="%PUBLIC_URL%/example.png" />
-    <meta name="author" content="Example Author" />
-    <meta property="og:description" content="Example Description" />
-    <meta property="og:url" content="https://example.com" />
+    <meta property="og:title" content="airBnb" />
+    <meta name="image" property="og:image" content="https://i.imgur.com/TyfCaNB.png" />
+    <meta name="author" content="Pawan Chahal" />
+    <meta property="og:description" content="My first solo project for a/A" />
 
     <link rel="shortcut icon" href="../public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
