attempting to debug meta image not showing up

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta property="og:title" content="airBnb" />
-    <meta name="image" property="og:image" content="https://i.imgur.com/TyfCaNB.png" />
+    <meta name="image" property="og:image" content="https://i.imgur.com/TyfCaNB.png">
+
     <meta name="author" content="Pawan Chahal" />
     <meta property="og:description" content="My first solo project for a/A" />
 
